Re-write the bundle

--- a/Resources/config/pimcore/config.yml
+++ b/Resources/config/pimcore/config.yml
@@ -1,8 +1,6 @@
-
-# Pimcore
 pimcore:
     objects:
         class_definitions:
             data:
                 map:
-                    objectBridge: \Pimcore\Model\DataObject\ClassDefinition\Data\Href
+                    objectBridge: ObjectBridgeBundle\Model\Object\ClassDefinition\Data\ObjectBridge
