--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     },{
       "name": "Joris Ros",
       "email": "j.ros@youwe.nl"
+    },{
+      "name": "Griselta Latifi",
+      "email": "g.latifi@youwe.nl"
     },
     {
       "name": "Youwe"
