--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -9,16 +9,7 @@ services:
         # if you need to do this, you can override this setting on individual services
         public: false
 
-    # controllers are imported separately to make sure they're public
-    # and have a tag that allows actions to type-hint services
-    ObjectBridgeBundle\Controller\:
-        resource: '../../Controller'
-        public: true
-        tags: ['controller.service_arguments']
+    ObjectBridgeBundle\EventListener\PersistDeleteListener:
+        tags:
+            - { name: kernel.event_listener, event: pimcore.dataobject.preDelete, method: objectPreDelete }
 
-# add more services, or override services that need manual wiring
-#    ObjectBridgeBundle\ExampleClass:
-#        arguments:
-#            - "@service_id"
-#            - "plain_value"
-#            - "%parameter%"
