Make it compatible with php 7.2

--- a/Resources/config/pimcore/config.yml
+++ b/Resources/config/pimcore/config.yml
@@ -3,4 +3,4 @@ pimcore:
         class_definitions:
             data:
                 map:
-                    objectBridge: ObjectBridgeBundle\Model\Object\ClassDefinition\Data\ObjectBridge
+                    objectBridge: ObjectBridgeBundle\Model\DataObject\ClassDefinition\Data\ObjectBridge
