[BUGFIX] Bridge data objects not copied
Bridge data objects were not copied when copying a data object, causing
multiple data objects to have references to the same bridge data object.
Fixed by implementing a copy event listener which copies the bridge data
objects and sets them on the copied data object.
Note that this will not retroactively fix copies made before. It will require
removing the bridge data objects and adding them again.

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -13,3 +13,6 @@ services:
         tags:
             - { name: kernel.event_listener, event: pimcore.dataobject.preDelete, method: objectPreDelete }
 
+    ObjectBridgeBundle\EventListener\CopyEventListener:
+        tags:
+        - { name: kernel.event_listener, event: pimcore.dataobject.postCopy, method: postCopy }
