Abandon bundle in favor of advanced relation
Use advanced many to one object relation instead.

--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,6 @@
         "ObjectBridgeBundle\\ObjectBridgeBundle"
       ]
     }
-  }
+  },
+  "abandoned": "https://pimcore.com/docs/pimcore/current/Development_Documentation/Objects/Object_Classes/Data_Types/Relation_Types.html#page_Advanced-Many-To-One-Object-Relation"
 }
